# Auto-TMA-DeepLearning

./: .gitignore  LICENSE  README.md  auto_tma_python_simple.py  measurements.json  pyproject.toml
auto_tma/: __init__.py  deep_learning.py  geometry.py  models.py  predict.py  simulation.py  steady_course.py  vision.py
tests/: __init__.py  test_deep_learning.py  test_predict.py  test_vision.py
